1999-11-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* symtab.cc (symbol_record::symbol_def::type_as_string): New function.

	* symtab.cc (symbol_record::which): New functions.
	* help.cc (do_which): New functions.
	(Fwhich): Use them.

	* help.cc (help_from_symbol_table, help_from_file): New functions.
	(builtin_help): Use them.

	* help.cc (do_type): New function.
	(Ftype): Use them.

	* help.cc (print_symbol_type): Delete.

	* symtab.cc (symbol_table::name_list): Delete count arg.
	(symbol_table::symbol_list): Likewise.
	(symbol_table::glob): Likewise.  Also return Array<symbol_record *>
	instead of symbol_record **.
	Change all callers.
	* help.cc (names, display_symtab_names): Delete count arg.

	* help.cc (print_symbol_type, Ftype): No longer need to look up
	fcn_file_name in the loadpath.

	* help.cc (print_symbol_type): Handle dld functions.
	(help_from_symbol_table, help_from_file): New functions.
	(builtin_help): Use them.

1999-11-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-cell.cc (Fiscell, Fcell): New Functions.
	(octave_cell::do_index_op): New function.

	* utils.cc (get_dimensions): Move here from data.cc and make extern.
	(Vtreat_neg_dim_as_zero, treat_neg_dim_as_zero): Likewise.
	(symbols_of_utils): New function.

	* data.cc (fill_matrix (const octave_value_list&, double,
	const char*)): New function.
	(Fones, Fzeros): Use it to avoid some code duplication.

1999-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-cell.h, pt-cell.cc, ov-cell.h, ov-cell.cc, Cell.h, Cell.cc:
	New files.
	* Makefile.in: Add them to the appropriate lists.
	* pt-walk.h (visit_cell (tree_cell&): New pure virtual.
	* pt-pr-code.cc (tree_print_code::visit_cell (tree_cell&)): New
	function.
	* TEMPLATE-INST/Array-tc.cc: Instantiate 2D arrays of octave_value
	objects.
	* pt-all.h: Include pt-cell.h.
	* ov.h, ov.cc (octave_value::is_cell, octave_value::cell_value):
	New functions.
	* ov-base.h, ov-base.cc (octave_value::is_cell,